--- a/Lab_work.ipynb
+++ b/Lab_work.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vObhQBhM1_Wr",
-        "outputId": "9398c4f0-5d21-465e-aaaf-401508796beb"
+        "outputId": "587a9851-0892-49a3-aead-7e72cc1090cd"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lJta9Xx973Ul",
-        "outputId": "84987ad2-e363-4d75-f89e-cce73b2a92e5"
+        "outputId": "9ab84276-7bb9-4701-b3fb-e2f61f670530"
       },
       "execution_count": 2,
       "outputs": [
@@ -72,7 +72,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting biopython\n",
             "  Downloading biopython-1.81-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m27.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m30.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from biopython) (1.22.4)\n",
             "Installing collected packages: biopython\n",
             "Successfully installed biopython-1.81\n"
@@ -102,7 +102,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47cc6bcd-ee66-4b85-8496-4521341cc429"
+        "outputId": "8d13fe0e-c536-4b8e-a682-fe85100ba155"
       },
       "execution_count": 4,
       "outputs": [
@@ -125,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zSYVJiwnivZm",
-        "outputId": "80cb4b57-13ba-4565-9e23-8048ca7b92e7"
+        "outputId": "041cf678-48cd-4b14-9d00-b7369daecb85"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,70 +149,69 @@
       "cell_type": "code",
       "source": [
         "import gff3_parser\n",
-        "filepath = \"/Zm-B73-REFERENCE-NAM-5.0_Zm00001eb.1.gff3\""
+        "filepath = \"/content/drive/MyDrive/Colab Notebooks/Zm-B73-REFERENCE-NAM-5.0_Zm00001eb.1.gff3\""
       ],
       "metadata": {
         "id": "-RiPq452i5kp"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "just_tabular = gff3_parser.parse_gff3(filepath, verbose = True, parse_attributes = False)"
+        "# use Pandas for reading tables from CSV or TSV files\n",
+        "# https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html"
+      ],
+      "metadata": {
+        "id": "gL4YSnnh_ac-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas \n",
+        "maize_gene_annotation_table = pandas.read_csv(\"/content/drive/MyDrive/Colab Notebooks/Zm-B73-REFERENCE-NAM-5.0_Zm00001eb.1.gff3\", sep=\"\\t\", skiprows=4)"
+      ],
+      "metadata": {
+        "id": "JYPWtA3Lcj54"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip3 install pyBedGraph"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7sz9O4FljJn0",
-        "outputId": "b376642e-0f36-43c6-e86e-c3bfe42ef1a7"
+        "id": "OYlZ_rY7z_C0",
+        "outputId": "43ed0e5e-5348-4d45-ab52-056bd910141c"
       },
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " generated on Thu Jul  2 15:00:44 2020 by /sonas-hs/ware/hpc/home/olson/src/warelab/gramene-ensembl/scripts/dump-scripts/sharon_gff_dump_by_logicname_nam.pl\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 375857/375857 [00:01<00:00, 215900.31it/s]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# use Pandas for reading tables from CSV or TSV files\n",
-        "# https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html\n",
-        "pandas.read_csv"
-      ],
-      "metadata": {
-        "id": "gL4YSnnh_ac-",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 198
-        },
-        "outputId": "b49a065b-5297-479f-ca4e-d1d081783990"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-24e83ac7a078>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# use Pandas for reading tables from CSV or TSV files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'pandas' is not defined"
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting pyBedGraph\n",
+            "  Downloading pyBedGraph-0.5.43.tar.gz (361 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m361.6/361.6 KB\u001b[0m \u001b[31m12.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: numpy>=1.16.4 in /usr/local/lib/python3.9/dist-packages (from pyBedGraph) (1.22.4)\n",
+            "Building wheels for collected packages: pyBedGraph\n",
+            "  Building wheel for pyBedGraph (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyBedGraph: filename=pyBedGraph-0.5.43-cp39-cp39-linux_x86_64.whl size=1423169 sha256=c5f3f3dc17b4dc1c7aaf53ac79b2a3acbe6ba2f2a06040a2c8ff2b2b2a91a6c4\n",
+            "  Stored in directory: /root/.cache/pip/wheels/63/c5/8b/364b74e2111799e85be686cba951506a4cc443985a6abd5681\n",
+            "Successfully built pyBedGraph\n",
+            "Installing collected packages: pyBedGraph\n",
+            "Successfully installed pyBedGraph-0.5.43\n"
           ]
         }
       ]
@@ -220,30 +219,13 @@
     {
       "cell_type": "code",
       "source": [
-        "maize_gene_annotation_table = pandas.read_csv(\"Zm-B73-REFERENCE-NAM-5.0_Zm00001eb.1.gff3\", sep=\"\\t\", skiprows=4)"
+        "from pyBedGraph import BedGraph"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "id": "JYPWtA3Lcj54",
-        "outputId": "1ab82f6a-fd00-4036-fda7-3c78b059d6b1"
+        "id": "B6C8ZXZa097k"
       },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-78b25c7e9be8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmaize_gene_annotation_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Zm-B73-REFERENCE-NAM-5.0_Zm00001eb.1.gff3\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mskiprows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'pandas' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 9,
+      "outputs": []
     }
   ]
 }
